Microcontroladores/Projetos/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:43:44 **** Incremental Build of configuration Debug for project Projeto inputcapture ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Projeto inputcapture.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\Users\ALUNO OC\Desktop\Guto\Estudos\Programação\Microcontroladores\Projetos\Projeto inputcapture\STM32L053R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Projeto inputcapture.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Projeto inputcapture.elf
 
arm-none-eabi-size  Projeto\ inputcapture.elf 
arm-none-eabi-objdump -h -S Projeto\ inputcapture.elf  > "Projeto inputcapture.list"
   text	   data	    bss	    dec	    hex	filename
  10068	     12	   1652	  11732	   2dd4	Projeto inputcapture.elf
Finished building: default.size.stdout
 
Finished building: Projeto inputcapture.list
 
17:44:13 **** Incremental Build of configuration Debug for project Projeto inputcapture ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:50:31: error: initializer element is not constant
   50 | uint32_t prescale_frequency = htim2.Instance->PSC;
      |                               ^~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
17:44:29 **** Incremental Build of configuration Debug for project Projeto inputcapture ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:227:31: error: initializer element is not constant
  227 | uint32_t prescale_frequency = htim2.Instance->PSC;
      |                               ^~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
17:44:47 **** Incremental Build of configuration Debug for project Projeto inputcapture ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Projeto inputcapture.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\Users\ALUNO OC\Desktop\Guto\Estudos\Programação\Microcontroladores\Projetos\Projeto inputcapture\STM32L053R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Projeto inputcapture.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Projeto inputcapture.elf
 
arm-none-eabi-size  Projeto\ inputcapture.elf 
arm-none-eabi-objdump -h -S Projeto\ inputcapture.elf  > "Projeto inputcapture.list"
   text	   data	    bss	    dec	    hex	filename
  10068	     12	   1652	  11732	   2dd4	Projeto inputcapture.elf
Finished building: default.size.stdout
 
Finished building: Projeto inputcapture.list
 
17:51:11 **** Incremental Build of configuration Debug for project Projeto inputcapture ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Projeto inputcapture.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\Users\ALUNO OC\Desktop\Guto\Estudos\Programação\Microcontroladores\Projetos\Projeto inputcapture\STM32L053R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Projeto inputcapture.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Projeto inputcapture.elf
 
arm-none-eabi-size  Projeto\ inputcapture.elf 
arm-none-eabi-objdump -h -S Projeto\ inputcapture.elf  > "Projeto inputcapture.list"
   text	   data	    bss	    dec	    hex	filename
  10160	     12	   1652	  11824	   2e30	Projeto inputcapture.elf
Finished building: default.size.stdout
 
Finished building: Projeto inputcapture.list
 
17:51:52 **** Incremental Build of configuration Debug for project Projeto inputcapture ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Projeto inputcapture.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\Users\ALUNO OC\Desktop\Guto\Estudos\Programação\Microcontroladores\Projetos\Projeto inputcapture\STM32L053R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Projeto inputcapture.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Projeto inputcapture.elf
 
arm-none-eabi-size  Projeto\ inputcapture.elf 
arm-none-eabi-objdump -h -S Projeto\ inputcapture.elf  > "Projeto inputcapture.list"
   text	   data	    bss	    dec	    hex	filename
  10160	     12	   1652	  11824	   2e30	Projeto inputcapture.elf
Finished building: default.size.stdout
 
Finished building: Projeto inputcapture.list
 
